--- a/resources/views/task/taskslist.twig
+++ b/resources/views/task/taskslist.twig
@@ -45,5 +45,6 @@
             {% endif %}
         </tbody>
     </table>
+    <a href="{{ path_for('child.childlist') }}" class="btn btn-danger">Back</a>
 </div>
 {% endblock content %}
