--- a/resources/views/task/taskup.twig
+++ b/resources/views/task/taskup.twig
@@ -15,6 +15,16 @@
 						<input type="text" name="description" id="description" placeholder="Describe the task" class="form-control">
 					</div>
 
+					<div class="form-group clockpicker" data-placement="left" data-align="top" data-donetext="Done" data-twelvehour="false" data-autoclose="true">
+						<label for="start">Start Time</label>
+					    <input type="text" name="start" id="start" class="form-control" value="">
+					</div>
+
+					<div class="form-group clockpicker" data-placement="left" data-align="top" data-donetext="Done" data-twelvehour="false" data-autoclose="true">
+						<label for="end">End Time</label>
+					    <input type="text" name="end" id="end" class="form-control" value="">
+					</div>
+					<!--
 					<div class="form-group">
 						<label for="start">Start Time</label>
 						<input type="text" name="start" id="start" placeholder="xxxxxx" class="form-control">
@@ -24,10 +34,11 @@
 						<label for="end">End Time</label>
 						<input type="text" name="end" id="end" placeholder="xxxxxx" class="form-control">
 					</div>
-
+					-->
 					<input type="hidden" id="email" name="email" value="{{ data }}">
 
-					<button type="submit" class="btn btn-default">Add Task</button>
+					<button type="submit" class="btn btn-info">Add Task</button>
+					<a href="{{ path_for('child.childlist') }}" class="btn btn-danger">Back</a>
                                         
                                         {{ csrf.field | raw }}
 
