--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -18,7 +18,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ auth.user.email }}<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path_for('child.childlist') }}">Manage</a></li>
+                            <li><a href="{{ path_for('child.childlist') }}">Dashboard</a></li>
                             <li><a href="{{ path_for('auth.signout') }}">Sign out</a></li>
                         </ul>
                     </li>
