--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>App</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="{{ base_url() }}/css/dist/bootstrap-clockpicker.min.css">
-		<link rel="stylesheet" href="{{ base_url() }}/css/app.css">
-	</head>
-	<body>
-		{% include 'templates/partials/navigation.twig' %}
+    <head>
+        <meta charset="UTF-8">
+        <title>TimeSmasher</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{{ base_url() }}/css/dist/bootstrap-clockpicker.min.css">
+        <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
+    </head>
+    <body>
+        {% include 'templates/partials/navigation.twig' %}
 
-		<div class="container">
-                    {% include 'templates/partials/flash.twig' %}
-			{% block content %}{% endblock %}
-		</div>
+        <div class="container">
+            {% include 'templates/partials/flash.twig' %}
+        {% block content %}{% endblock %}
+    </div>
 
 
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="{{ base_url() }}/css/dist/bootstrap-clockpicker.min.js"></script>
-		<script type="text/javascript">
-		    $('.clockpicker').clockpicker();
-		</script>
-	</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{ base_url() }}/css/dist/bootstrap-clockpicker.min.js"></script>
+    <script type="text/javascript">
+        $('.clockpicker').clockpicker();
+    </script>
+</body>
 </html>
