--- a/resources/views/task/taskslist.twig
+++ b/resources/views/task/taskslist.twig
@@ -1,25 +1,16 @@
 {% extends 'templates/app.twig' %}
 
 {% block content %}
-    <h1>{{ email }} Tasks</h1>
-    <div>
-
-        <form action="{{ path_for('task.taskup')}}" method="GET"> 
-            <input class="btn btn-info" type = "submit" value ="Add">
-            <input type="hidden" id="delete" name="delete" value="1">
-            <input type="hidden" id="email" name="email" value="{{ email }}">
-            {{ csrf.field | raw }}
-        </form>
-
-    </div>
+    <h1>Tasks</h1>
     <div class="bs-example">
         <table class="table table-hover">
             <thead>
                 <tr>
+                    <th>Child</th>
                     <th>Description</th>
                     <th>Start</th>
                     <th>End</th>
-                    <th>Days</th>
+                    <th>Day</th>
                     <th>Alarm</th>
                     <th colspan="2" align="center">Actions</th>
                 </tr>
@@ -28,17 +19,25 @@
                 {% if data %}
                     {% for row in data %}
                         <tr>
+                            <td>{{ row.email }}</td>
                             <td>{{ row.description}}</td>
                             <td>{{ row.start }}</td>
                             <td>{{ row.end }}</td>
-                            <td>{{ row.monday ? 'Mo' : '' }}
-                                {{ row.tuesday ? ', Tu' : '' }}
-                                {{ row.wednesday ? ', We' : '' }}
-                                {{ row.thursday ? ', Th' : '' }}
-                                {{ row.friday ? ', Fr' : '' }}
-                                {{ row.saturday ? ', Su' : '' }}
-                                {{ row.sunday ? ', Sa' : '' }}
-                            </td>
+                            {% if row.day == 0 %}
+                            <td>Monday</td>
+                            {% elseif row.day == 1 %}
+                            <td>Tuesday</td>
+                            {% elseif row.day == 2  %}
+                            <td>Wednesday</td>
+                            {% elseif row.day == 3  %}
+                            <td>Thursday</td>
+                            {% elseif row.day == 4 %}
+                            <td>Friday</td>
+                            {% elseif row.day == 5 %}
+                            <td>Saturday</td>
+                            {% elseif row.day == 6 %}
+                            <td>Sunday</td>
+                            {% endif %}
                             <td>{{ row.alarm ? 'Yes' : 'No' }}</td>
                             <td>
                                 <form action="{{ path_for('task.taskslist')}}" method="POST"> 
@@ -47,6 +46,7 @@
                                     <input type="hidden" id="description" name="description" value="{{row.description}}">
                                     <input type="hidden" id="start" name="start" value="{{row.start}}">
                                     <input type="hidden" id="end" name="end" value="{{row.end}}">
+                                    <input type="hidden" id="day" name="day" value="{{row.day}}">
                                     {{ csrf.field | raw }}
                                 </form>
                             </td>
