--- a/resources/views/child/childup.twig
+++ b/resources/views/child/childup.twig
@@ -26,7 +26,7 @@
                             {% endif %}
                         </div>
 
-                        <button type="submit" class="btn btn-info">Add Child</button>
+                        <button type="submit" class="btn btn-success">Add Child</button>
                         <a href="{{ path_for('child.childlist') }}" class="btn btn-danger">Back</a>                    
                         {{ csrf.field | raw }}
                     </form>
