--- a/resources/views/task/taskslist.twig
+++ b/resources/views/task/taskslist.twig
@@ -58,6 +58,6 @@
             {% endif %}
             </tbody>
         </table>
-        <a href="{{ path_for('child.childlist') }}" class="btn btn-danger">Back</a>
+        <a href="{{ path_for('child.childlist') }}" class="btn">Back</a>
     </div>
 {% endblock content %}
