--- a/resources/views/Home.twig
+++ b/resources/views/Home.twig
@@ -2,6 +2,11 @@
 
 {% block content %}
 
-    Home
+        
+    <h1>Hello.</h1> 
+    <h3>Welcome {{ auth.user.email }}</h3>
+    </br></br>
+    <p>TimeSmasher is...</p>
+
 
 {% endblock %}
