--- a/resources/views/child/childlist.twig
+++ b/resources/views/child/childlist.twig
@@ -2,19 +2,25 @@
 
 {% block content %}
     <h1>Your Children</h1>
-    <div><a href="{{ path_for('child.childup') }}" class="btn btn-info">Add Child</a>
+    </br>
+    
+    <div>
+        <a href="{{ path_for('child.childup') }}" class="btn btn-primary btn-lg btn-block">Add Child</a>
+        
+        <form action="{{ path_for('task.taskslist') }}" method="GET"> 
+        <input class="btn btn-info btn-lg btn-block" type = "submit" value ="View Tasks">
+        <input type="hidden" id="email" name="email" value="{{row.email}}">
+        {{ csrf.field | raw }}
+        </form>
+        </br>
     </div>
-    <div><form action="{{ path_for('task.taskslist')}}" method="GET"> 
-                                    <input class="btn btn-standard" type = "submit" value ="View Tasks">
-                                    <input type="hidden" id="email" name="email" value="{{row.email}}">
-                                    {{ csrf.field | raw }}
-                                </form></div>
+    
     <div class="bs-example">
         <table class="table table-hover">
             <thead>
                 <tr>
                     <th>Email</th>
-                    <th colspan="2" align="center">Actions</th>
+                    <th colspan="2" align="center">Tasks</th>
                 </tr>
             </thead>
             <tbody>
@@ -22,29 +28,25 @@
                     {% for row in data %}
                         <tr>
                             <td>{{ row.email }}</td>
-                            <td><form action="{{ path_for('task.taskup')}}" method="GET"> 
-                                    <input class="btn btn-standard" type = "submit" value ="Add">
+                            <td>
+                                <form action="{{ path_for('task.taskup')}}" method="GET"> 
+                                    <input class="btn btn-success" type = "submit" value ="Add">
                                     <input type="hidden" id="email" name="email" value="{{row.email}}">
                                     {{ csrf.field | raw }}
                                 </form>
-
                             </td>
                             <td>
-
                                 <form action="{{ path_for('child.childlist')}}" method="POST"> 
                                     <input class="btn btn-danger" type = "submit" value ="Delete">
                                     <input type="hidden" id="email" name="email" value="{{row.email}}">
-
                                     {{ csrf.field | raw }}
                                 </form>
                             </td>
                         </tr>
-
                     {% endfor %} 
                 {% else %}
                 <p>No records found</p>
             {% endif %}
-
             </tbody>
         </table>
     </div>
