--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -2,28 +2,39 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>TimeSmasher</title>
-
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{{ base_url() }}/css/dist/bootstrap-clockpicker.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ base_url() }}/css/bootstrap-timepicker.min.css">
         <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
     </head>
+    
     <body>
         {% include 'templates/partials/navigation.twig' %}
 
         <div class="container">
             {% include 'templates/partials/flash.twig' %}
-        {% block content %}{% endblock %}
-    </div>
+            {% block content %}{% endblock %}
+        </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="{{ base_url() }}/js/bootstrap-timepicker.min.js"></script>
+        <script type="text/javascript">
+            $('#timepicker1').timepicker({
+                showSeconds: true,
+                showMeridian: false,
+                minuteStep: 1,
+                secondStep: 1,
+            });
+        </script>
+        <script type="text/javascript">
+            $('#timepicker2').timepicker({
+                showSeconds: true,
+                showMeridian: false,
+                minuteStep: 1,
+                secondStep: 1,
+            });
+        </script>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ base_url() }}/css/dist/bootstrap-clockpicker.min.js"></script>
-    <script type="text/javascript">
-        $('.clockpicker').clockpicker();
-    </script>
-</body>
+    </body>
 </html>
