--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -13,6 +13,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ path_for('home') }}">Home</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ path_for('child.childlist') }}">Dashboard</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if auth.check %}
                     <li class="dropdown">
